# ptm4

./: .gitignore  CLAUDE.md  README.md
.claude/skills/radarr-add/: SKILL.md
.claude/skills/sonarr-add/: SKILL.md
.github/workflows/: homelab-agents.yml  rpi-deploy.yml
Peters Spellbook/: hl.drawio  homelab-techdoc.md
Peters Spellbook/Azure/Misc/: GroupRBACAssign.ps1  azcopy.ps1
Peters Spellbook/Azure/Networking/: PrivateDNS.ps1  azvnetpeering.ps1  getVnetInfo.ps1  getazvnet.ps1
Peters Spellbook/Azure/Policy/: policy.ps1
Peters Spellbook/GP-VoucherApp/: GPAppv1.ps1  GPscriptv2.ps1
Peters Spellbook/RPI/: .env.example  docker-compose.yml  setup-logs.sh
Peters Spellbook/Terraform/ACI-vnet-testing/: main.tf  outputs.tf  providers.tf  variables.tf
Peters Spellbook/Terraform/AFD/: providers.tf
Peters Spellbook/Terraform/Pipelines/: wp-jammylab-docker-pipeline.yml
Peters Spellbook/Terraform/aci-module/: providers.tf
Peters Spellbook/misc-scripts/: vlcwatcher.ps1
h/RPI/: docker-compose.yml  nginx-wg.conf
h/widget/: package-lock.json
h/widget/src-tauri/: Cargo.toml
h/widget/src-tauri/src/: config.rs
homelab/: homelab-techdoc.md  ptm4homelab.drawio
homelab/PTMonitor-widget/: package.json
homelab/RPI-srv/: .env.example  docker-compose.yml  nginx-wg.conf  setup-logs.sh
homelab/Tools/: Get-LeetifyStats.ps1  cs2leetifypull.ps1  s1.ps1  s2bar.ps1  vlcwatcher  vlcwatcher.ps1
homelab/agentic/: gen-workspace.py  probe.py  propose.py  troubleshooting.md  workspace.json
infra/: .gitignore
w/: technicalwriteup.md
w/GP-VoucherApp/: test2.ps1
(+200 files in other folders)
